# Server-side-WebAssembly-Research

./: LICENSE
containers/: Dockerfile  README.md  hello-world-rust.wasm
containers/etc/containerd/: config.toml
containers/home/user/: wasm-pod.yaml
containers/source-code/src/: main.rs
demo/: README.md
demo/cross-language-demo/java-rust/: readme.md
demo/cross-language-demo/java-rust/java-host/: build.gradle.kts  settings.gradle.kts
demo/cross-language-demo/java-rust/rust guest/: cargo.toml
demo/http_ai_faas_demo/: README.md
demo/http_ai_faas_demo/patches/tract-onnx/: Cargo.toml
demo/http_ai_faas_demo/src/: lib.rs
demo/wasmcloud-persistence/: readme.md
demo/wasmcloud-persistence/http-hello-world/: Cargo.toml  wasmcloud.toml
demo/wasmcloud-persistence/http-hello-world/manifests/: workloaddeployment.yaml
experiments/: .gitignore  README.md
experiments/Test_AI_WASI/: Cargo.toml  spin.toml
experiments/Test_AI_WASI/patches/tract-onnx/: .cargo_vcs_info.json
experiments/Test_WASI_API/cpp_api_library/: README.md  main.cpp
experiments/Test_WASI_API/go_api_library/: README.md  go.mod  main.go
experiments/Test_WASI_API/rust_api_library/: Cargo.toml  README.md
hello_world_tests/: README.md
hello_world_tests/Cpp/Wasmtime/: README.md
hello_world_tests/Cpp/native/: README.md
hello_world_tests/Go/Wasmtime/: README.md
hello_world_tests/Go/native/: README.md
hello_world_tests/Java/GraalWasm/: README.md
hello_world_tests/Rust/WasmEdge/: README.md
hello_world_tests/Rust/Wasmtime/: README.md
hello_world_tests/Rust/native/: README.md
(+44 files in other folders)
