[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
spin-sdk      = "3"
tract-onnx    = "0.22"
image         = { version = "0.25", default-features = false, features = ["jpeg", "png", "bmp"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
anyhow        = "1"
once_cell     = "1"

# Use patched tract-onnx so SAM encoder Pad nodes with pads.len() == 2 don't panic
# (tract expects 2*rank elements; we zero-extend short pads in patches/tract-onnx).
[patch.crates-io]
tract-onnx = { path = "patches/tract-onnx" }
